[package]
name = "integritee-collator"
description = "The Integritee parachain collator binary"
# align major.minor revision with polkadot SDK. bump patch revision ad lib. make this the github release tag
version = "1.16.1"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/parachain"
build = "build.rs"
edition = "2021"

[[bin]]
name = "integritee-collator"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
futures = { workspace = true, features = ["std"] }
hex-literal = { workspace = true }
log = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Parachain runtimes
integritee-kusama-runtime = { path = "integritee-kusama" }
integritee-parachains-common = { path = "common" }
integritee-polkadot-runtime = { path = "integritee-polkadot" }

# Substrate dependencies
frame-benchmarking = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-keystore = { workspace = true, features = ["std"] }
sp-offchain = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-session = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }
sp-transaction-pool = { workspace = true, features = ["std"] }
substrate-prometheus-endpoint = { workspace = true }

# RPC related dependencies
jsonrpsee = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-transaction-pool-api = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# Cumulus dependencies
color-print = { workspace = true }
cumulus-client-cli = { workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true, features = ["std"] }
cumulus-primitives-parachain-inherent = { workspace = true, features = ["std"] }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }
cumulus-relay-chain-rpc-interface = { workspace = true }

# Polkadot dependencies
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true, features = ["std"] }
polkadot-service = { workspace = true }
staging-xcm = { workspace = true, features = ["std"] }

# Temporary pin only
# See https://github.com/bluejekyll/trust-dns/issues/1946 for more details.
enum-as-inner = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
nix = { workspace = true }
pallet-sudo = { workspace = true, features = ["std"] }
polkadot-cli = { workspace = true, features = ["rococo-native"] } # purge_chain_works works with rococo-local and needs to allow this
tempfile = { workspace = true }
tokio = { workspace = true }
wait-timeout = { workspace = true }

[features]
default = []
runtime-benchmarks = [
    "cumulus-primitives-core/runtime-benchmarks",
    "frame-benchmarking-cli/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "integritee-kusama-runtime/runtime-benchmarks",
    "polkadot-cli/runtime-benchmarks",
    "polkadot-primitives/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "polkadot-service/runtime-benchmarks",
]
fast-runtime = [
    "polkadot-service/fast-runtime",
    "integritee-kusama-runtime/fast-runtime",
]
try-runtime = [
    "polkadot-cli/try-runtime",
    "sp-runtime/try-runtime",
    "integritee-kusama-runtime/try-runtime",
]
