[package]
name = "parachains-common"
# major.minor revision must match collator node. patch bump ad lib
version = "1.7.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Logic which is common to all parachain runtimes"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# External dependencies
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"], default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# dependencies not existing upstream
smallvec = "1.9.0"

# Substrate dependencies
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-assets = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-authorship = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

# Polkadot dependencies
polkadot-core-primitives = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-primitives = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-runtime-common = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
xcm-executor = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-assets/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "polkadot-core-primitives/std",
    "polkadot-primitives/std",
    "polkadot-runtime-common/std",
    "scale-info/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm-executor/std",
    "xcm/std",
]
