[package]
name = "integritee-parachains-common"
# major.minor revision must match collator node. patch bump ad lib
version = "1.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Logic which is common to all parachain runtimes"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }

# integritee
pallet-porteer = { workspace = true }

# Substrate dependencies
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-xcm = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Polkadot dependencies
polkadot-core-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
xcm = { workspace = true }
xcm-executor = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-porteer/std",
    "pallet-xcm/std",
    "polkadot-core-primitives/std",
    "polkadot-primitives/std",
    "polkadot-runtime-common/std",
    "scale-info/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm-executor/std",
    "xcm/std",
]
