[package]
name = "integritee-runtime"
description = "The Integritee parachain runtime"
# align major.minor revision with polkadot SDK. patch revision must match runtime spec_version
version = "1.13.540"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/parachain"
edition = "2021"

[dependencies]
hex-literal = { workspace = true }
integritee-parachains-common = { path = "../common", default-features = false }
log = { workspace = true }
parity-scale-codec = { workspace = true }
primitive-types = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies

# pallets
assets-common = { workspace = true }
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-session-benchmarking = { optional = true, workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-aura = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
frame-executive = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
orml-traits = { workspace = true }
orml-xcm = { workspace = true }
orml-xcm-support = { workspace = true }
orml-xtokens = { workspace = true }
pallet-asset-conversion = { workspace = true }
pallet-asset-registry = { workspace = true }
pallet-assets = { workspace = true }
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-bounties = { workspace = true }
pallet-child-bounties = { workspace = true }
pallet-claims = { workspace = true }
pallet-collator-selection = { workspace = true }
pallet-collective = { workspace = true }
pallet-democracy = { workspace = true }
pallet-enclave-bridge = { workspace = true }
pallet-message-queue = { workspace = true }
pallet-multisig = { workspace = true }
pallet-preimage = { workspace = true }
pallet-proxy = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-session = { workspace = true }
pallet-sidechain = { workspace = true }
pallet-teeracle = { workspace = true }
pallet-teerex = { workspace = true }
pallet-teerdays = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }
pallet-utility = { workspace = true }
pallet-vesting = { workspace = true }
pallet-xcm = { workspace = true }
pallet-xcm-transactor = { workspace = true }
parachains-common = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
staging-parachain-info = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }
xcm-primitives = { workspace = true }
xcm-transactor-primitives = { workspace = true }

# Benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
cumulus-primitives-parachain-inherent = { workspace = true, features = ["std"] }
hex = { workspace = true }

polkadot-primitives = { workspace = true, features = ["std"] }
polkadot-runtime-parachains = { workspace = true, features = ["std"] }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true, features = ["metadata-hash"] }

[features]
default = ["std"]
std = [
    "assets-common/std",
    "cumulus-pallet-aura-ext/std",
    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-session-benchmarking?/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-aura/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-timestamp/std",
    "cumulus-primitives-utility/std",
    "frame-benchmarking?/std",
    "frame-executive/std",
    "frame-metadata-hash-extension/std",
    "frame-support/std",
    "frame-system-benchmarking?/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime?/std",
    "integritee-parachains-common/std",
    "log/std",
    "orml-traits/std",
    "orml-xcm-support/std",
    "orml-xcm/std",
    "orml-xtokens/std",
    "pallet-assets/std",
    "pallet-asset-conversion/std",
    "pallet-asset-registry/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-bounties/std",
    "pallet-child-bounties/std",
    "pallet-claims/std",
    "pallet-collator-selection/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-enclave-bridge/std",
    "pallet-message-queue/std",
    "pallet-multisig/std",
    "pallet-preimage/std",
    "pallet-proxy/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-sidechain/std",
    "pallet-teeracle/std",
    "pallet-teerdays/std",
    "pallet-teerex/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "pallet-utility/std",
    "pallet-vesting/std",
    "pallet-xcm-transactor/std",
    "pallet-xcm/std",
    "parachains-common/std",
    "parity-scale-codec/std",
    "polkadot-parachain-primitives/std",
    "polkadot-runtime-common/std",
    "primitive-types/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "staging-parachain-info/std",
    "staging-xcm-builder/std",
    "staging-xcm-executor/std",
    "staging-xcm/std",
    "substrate-wasm-builder",
    "xcm-transactor-primitives/std",
]
runtime-benchmarks = [
    "assets-common/runtime-benchmarks",
    "cumulus-pallet-parachain-system/runtime-benchmarks",
    "cumulus-pallet-session-benchmarking/runtime-benchmarks",
    "cumulus-pallet-xcmp-queue/runtime-benchmarks",
    "cumulus-primitives-utility/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "orml-xtokens/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
    "pallet-asset-conversion/runtime-benchmarks",
    "pallet-asset-registry/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-bounties/runtime-benchmarks",
    "pallet-child-bounties/runtime-benchmarks",
    "pallet-claims/runtime-benchmarks",
    "pallet-collator-selection/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-democracy/runtime-benchmarks",
    "pallet-enclave-bridge/runtime-benchmarks",
    "pallet-message-queue/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-preimage/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-sidechain/runtime-benchmarks",
    "pallet-teeracle/runtime-benchmarks",
    "pallet-teerdays/runtime-benchmarks",
    "pallet-teerex/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks",
    "pallet-xcm-transactor/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "parachains-common/runtime-benchmarks",
    "polkadot-parachain-primitives/runtime-benchmarks",
    "polkadot-runtime-common/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "staging-xcm-builder/runtime-benchmarks",
    "staging-xcm-executor/runtime-benchmarks",
]

try-runtime = [
    "cumulus-pallet-aura-ext/try-runtime",
    "cumulus-pallet-dmp-queue/try-runtime",
    "cumulus-pallet-parachain-system/try-runtime",
    "cumulus-pallet-xcm/try-runtime",
    "cumulus-pallet-xcmp-queue/try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "orml-xcm/try-runtime",
    "orml-xtokens/try-runtime",
    "pallet-assets/try-runtime",
    "pallet-asset-conversion/try-runtime",
    "pallet-asset-registry/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-bounties/try-runtime",
    "pallet-child-bounties/try-runtime",
    "pallet-claims/try-runtime",
    "pallet-collator-selection/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-democracy/try-runtime",
    "pallet-enclave-bridge/try-runtime",
    "pallet-message-queue/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-proxy/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-session/try-runtime",
    "pallet-sidechain/try-runtime",
    "pallet-teeracle/try-runtime",
    "pallet-teerex/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-vesting/try-runtime",
    "pallet-xcm-transactor/try-runtime",
    "pallet-xcm/try-runtime",
    "polkadot-runtime-common/try-runtime",
    "staging-parachain-info/try-runtime",
]
# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []
